--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,4 +1,4 @@
 # These owners will be the default owners for everything in
 # the repo. People listed below will be requested for review
 # when someone opens a pull request.
-* @lmilbaum @fdegir @MarckK @gkunz @vikyol @tracymiranda @mjmckay @mgreau @majinghe @todaywasawesome
+* @lmilbaum @fdegir @MarckK @gkunz @vikyol @tracymiranda @mjmckay @mgreau @majinghe @todaywasawesome @bendory
